--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "uuid": "^11.1.0"
   },
-  "devDependencies": {},
   "keywords": [],
   "description": ""
 }
